Another refactor. This time to use a Walker and use on-demand resolution. Also just a lot of cleanup