@@ -1,16 +1,13 @@
 package com.hmellema.sgf4j.extensions.core.resolvers;
 
 import com.hmellema.sgf4j.extensions.core.shapegenmetadata.StructureShapeGenMetadata;
-import com.hmellema.sgf4j.extensions.core.util.TypeConversionUtil;
 import com.hmellema.sgf4j.gendata.ShapeGenMetadata;
-import com.hmellema.sgf4j.mapping.Resolver;
-import com.hmellema.sgf4j.mapping.ShapeGenMetadataMap;
+import com.hmellema.sgf4j.loader.MetaDataLoader;
+import com.hmellema.sgf4j.resolving.Resolver;
 import software.amazon.smithy.model.shapes.Shape;
-import software.amazon.smithy.model.shapes.ShapeId;
 import software.amazon.smithy.model.shapes.ShapeType;
 import software.amazon.smithy.model.shapes.StructureShape;
 
-import java.util.Set;
 import java.util.stream.Collectors;
 
 public class StructureResolver implements Resolver {
@@ -21,22 +18,15 @@ public class StructureResolver implements Resolver {
     return SUPPORTED_TYPE;
   }
 
-  @Override
-  public Set<ShapeId> getDependentShapes(Shape shape) {
-    var structureShape = (StructureShape) shape;
-    return structureShape.members().stream().map(Shape::getId).collect(Collectors.toSet());
-  }
-
 
   @Override
-  public ShapeGenMetadata resolve(Shape shape, ShapeGenMetadataMap shapeGenMetadataMap) {
+  public ShapeGenMetadata resolve(Shape shape, MetaDataLoader metaDataLoader) {
     var structureShape = (StructureShape) shape;
     var memberData = structureShape.getAllMembers()
             .values().stream()
             .map(Shape::getId)
-            .map(shapeGenMetadataMap::get)
-            .map(memberDataOptional -> memberDataOptional.orElseThrow(() -> new IllegalArgumentException("Tried to access unresolved shape")))
-            .collect(Collectors.toList());
+            .map(metaDataLoader::resolve)
+            .toList();
 
     return new StructureShapeGenMetadata(shape, memberData);
   }
